--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,4 @@
 <div class="hero-unit">
-    <h1>Welcome to SBJS</h1>
-    <h2><a href="https://github.com/login/oauth/authorize?client_id=f9aa961f63df8c7b766a&scope=user,user:email,public_repo&redirect_uri=http://localhost:9000">Login to Github </a></h2>
-    <h2><a href="/?code=537fb3f6697752be4951">Pretend Token</a></h2>
+  <h1>Welcome to SBJS</h1>
+  <a href="{{githubLoginUrl}}" class="btn btn-primary btn-large btn-block">Login to Github</a>
 </div>
