specs not passing, but refactor of profile / members fetch into auth module, pass into controllers

--- a/app/views/profile.html
+++ b/app/views/profile.html
@@ -1,19 +1,19 @@
 <div class="hero-unit profile">
-  <img class="thumbnail" src="{{user.avatar_url}}">
-  <h1>{{user.login}}</h1>
+  <img class="thumbnail" src="{{profile.avatar_url}}">
+  <h1>{{profile.login}}</h1>
   <div class="well">
     <table>
       <tr>
         <th>Name:</th>
-        <td>{{user.name}}</td>
+        <td>{{profile.name}}</td>
       </tr>
       <tr>
         <th>Location:</th>
-        <td>{{user.location}}</td>
+        <td>{{profile.location}}</td>
       </tr>
       <tr>
         <th>Public Repos:</th>
-        <td>{{user.public_repos}}</td>
+        <td>{{profile.public_repos}}</td>
       </tr>
     </table>
   </div>
