--- a/app/views/members.html
+++ b/app/views/members.html
@@ -2,9 +2,9 @@
   <h1>Members</h1>
   <ul class="well">
     <li ng-repeat="member in members">
-      <a href="{{ member.url }}">
-      	<img class="thumbnail" src="{{member.avatar_url}}">
-  	    <h2>{{member.login}}</h2>
+      <a href="{{ member.html_url }}" target="_blank">
+      	<img class="thumbnail" src="{{ member.avatar_url }}">
+  	    <h2>{{ member.login }}</h2>
       </a>
     </li>
   </ul>
